created basic HTML structure, initial CSS styling, working on JS game control function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,55 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div><h1 id="turn"></h1></div>
+        <div class="board">
+            <div class="cell cell1">
+                <button class="btn" id="cell1btn">
+                    <span id="mark1" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell2">
+                <button class="btn" id="cell2btn">
+                    <span id="mark2" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell3">
+                <button class="btn" id="cell3btn">
+                    <span id="mark3" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell4">
+                <button class="btn" id="cell4btn">
+                    <span id="mark4" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell5">
+                <button class="btn" id="cell5btn">
+                    <span id="mark5" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell6">
+                <button class="btn" id="cell6btn">
+                    <span id="mark6" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell7">
+                <button class="btn" id="cell7btn">
+                    <span id="mark7" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell8">
+                <button class="btn" id="cell8btn">
+                    <span id="mark8" class="mark"></span>
+                </button>
+            </div>
+            <div class="cell cell9">
+                <button class="btn" id="cell9btn">
+                    <span id="mark9" class="mark"></span>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
